Fixed font sizes and added white space near login info

--- a/assets/scss/nas-grp.scss
+++ b/assets/scss/nas-grp.scss
@@ -202,7 +202,6 @@ img {
   font-family: var(--main-fonts);
   font-weight: 600;
   text-transform: uppercase;
-  font-size: 0.9rem;
   color: var(--color-main);
 }
 
